<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_match_more_vert"
        android:title="@string/title_more"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_one_versus_one"
                android:title="@string/label_menu_item_versus_one" />
            <item
                android:id="@+id/action_series"
                android:title="@string/label_menu_item_series"/>
            <item
                android:id="@+id/action_rotation"
                android:title="@string/label_menu_item_rotation" />
            <item
                android:id="@+id/action_tournament"
                android:title="@string/label_menu_item_tournament"/>
            <item
                android:id="@+id/action_players_info"
                android:title="@string/label_menu_item_players"/>
            <item
                android:id="@+id/action_top_five_ranking"
                android:title="@string/label_menu_item_top_five_ranking"/>
            <item
                android:id="@+id/action_ranking"
                android:title="@string/label_menu_item_ranking"/>
        </menu>
    </item>
</menu>